
2019-04-07 Simon Sobisch <simonsobisch@gnu.org>

	* general: FR #354 added continue-after option, set to ok
	  for default/lax only as we won't have a dialect file for COBOL 202x
	  until its final working draft and release date is available

2019-03-18 Simon Sobisch <simonsobisch@gnu.org>

	* general: FR #352 added national-character-literals option, set to warning
	  for default/lax only as we still don't have a dialect file for Fujitsu

2019-01-29 Simon Sobisch <simonsobisch@gnu.org>

	* runtime.cfg: added COB_DISPLAY_PUNCH_FILE

2019-01-05  Edward Hart <edward.dan.hart@gmail.com>

	* general: added json-generate option

2018-04-12  Simon Sobisch <simonsobisch@gnu.org>

	* default.conf: set missing-statement (FR# 244) to warning as older
	  GnuCOBOL versions allowed a partial subset of these

2018-09-11  Simon Sobisch <simonsobisch@gnu.org>

	* mf-strict.conf: set missing-statement to error (according to MF docs)

2018-08-07  Edward Hart <edward.dan.hart@gmail.com>

	* general: added xml-generate and xml-generate-extra-phrases options
	* general: marked XML-CODE as implemented

2018-07-13  Simon Sobisch <simonsobisch@gnu.org>

	* ibm.words: updated to Enterprise COBOL 6.1 documentation,
	  added notes about coprocessor-only reserved words, made all phrases
	  for XML GENERATE / XML PARSE statements context-sensitive

2018-04-21  Simon Sobisch <simonsobisch@gnu.org>

	* general: added symbolic-constant, set to OK for default only
	  as we don't have a dialect file for Fujitsu currently

2018-03-31  Edward Hart <edward.dan.hart@gmail.com>

	* general: added zero-length-literals option

2018-03-09  Simon Sobisch <simonsobisch@gnu.org>

	* general: added move-figurative-space-to-numeric, set to OK for
	  ACUCOBOL and MicroFocus

2018-01-14  Ron Norman <rjn@inglenet.com>

	* general: added move-non-numeric-lit-to-numeric-is-zero
	  This changes MOVE SPACE/QUOTE/HIGH-VALUES TO PIC 9 field
	  into MOVE ZERO
	* mf.conf: move-figurative-constant-to-numeric: warn