@@ -671,7 +671,7 @@ only usable with COB_USE_VC2013_OR_GREATER */
 #define	COB_MAX_DEC_STRUCT	32
 
 /* Maximum length of COBOL words */
-#define	COB_MAX_WORDLEN		61
+#define	COB_MAX_WORDLEN		63
 
 /* Maximum length of COBOL program names */
 #define	COB_MAX_NAMELEN		31
